--- a/public/styles.css
+++ b/public/styles.css
@@ -25,7 +25,7 @@ header h1 {
 }
 
 footer {
-  background-color: #b0b220;
+  background-color: #fdff8f;
   position: absolute;
   margin: auto -16px;
   padding: 16px 32px;
