--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header h1 {
 }
 
 footer {
-  background-color: #b0b220;
+  background-color: #20B2AA;
   position: absolute;
   margin: auto -16px;
   padding: 16px 32px;
@@ -95,7 +95,7 @@ form button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #20B2AA;
+  background: #20B2AB;
   color: #fff;
   border: none;
   border-radius: 50%;
